err/mo-testing.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mo_collections'...
Compiling './lib/python3.5/site-packages/mo_collections/matrix.py'...
***   File "./lib/python3.5/site-packages/mo_collections/matrix.py", line 396
    exec code
            ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/mo_collections-1.2.17235.egg-info'...
Listing './lib/python3.5/site-packages/mo_dots'...
Listing './lib/python3.5/site-packages/mo_dots-1.7.17339.egg-info'...
Listing './lib/python3.5/site-packages/mo_future'...
Listing './lib/python3.5/site-packages/mo_future-1.1.17339.egg-info'...
Listing './lib/python3.5/site-packages/mo_json'...
Compiling './lib/python3.5/site-packages/mo_json/__init__.py'...
***   File "./lib/python3.5/site-packages/mo_json/__init__.py", line 50
    ESCAPE = re.compile(ur'[\x00-\x1f\\"\b\f\n\r\t]')
                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mo_json/encoder.py'...
***   File "./lib/python3.5/site-packages/mo_json/encoder.py", line 508
    return long(diff.total_seconds()) * 1000L + long(diff.microseconds / 1000)
                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mo_json-2.1.17319.egg-info'...
Listing './lib/python3.5/site-packages/mo_kwargs'...
Listing './lib/python3.5/site-packages/mo_kwargs-1.0.17227.egg-info'...
Listing './lib/python3.5/site-packages/mo_logs'...
Compiling './lib/python3.5/site-packages/mo_logs/log_usingThreadedStream.py'...
***   File "./lib/python3.5/site-packages/mo_logs/log_usingThreadedStream.py", line 80
    except Exception, f:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mo_logs-1.7.18011.egg-info'...
Listing './lib/python3.5/site-packages/mo_math'...
Listing './lib/python3.5/site-packages/mo_math/vendor'...
Listing './lib/python3.5/site-packages/mo_math/vendor/aespython'...
Listing './lib/python3.5/site-packages/mo_math/vendor/strangman'...
Compiling './lib/python3.5/site-packages/mo_math/vendor/strangman/stats.py'...
***   File "./lib/python3.5/site-packages/mo_math/vendor/strangman/stats.py", line 450
    print "\nDividing percent>1 by 100 in lscoreatpercentile().\n"
                                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mo_math/vendor/strangman/statstest.py'...
***   File "./lib/python3.5/site-packages/mo_math/vendor/strangman/statstest.py", line 18
    print '\nCENTRAL TENDENCY'
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mo_math-1.0.17227.egg-info'...
Listing './lib/python3.5/site-packages/mo_testing'...
Compiling './lib/python3.5/site-packages/mo_testing/fuzzytestcase.py'...
***   File "./lib/python3.5/site-packages/mo_testing/fuzzytestcase.py", line 133
    except Exception, _:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mo_testing-1.0.17227.egg-info'...
Listing './lib/python3.5/site-packages/mo_times'...
Listing './lib/python3.5/site-packages/mo_times/vendor'...
Listing './lib/python3.5/site-packages/mo_times/vendor/dateutil'...
Listing './lib/python3.5/site-packages/mo_times/vendor/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/mo_times-1.1.17256.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/__init__.py'...
Compiling './lib/python3.5/site-packages/tests/test_crypto.py'...
***   File "./lib/python3.5/site-packages/tests/test_crypto.py", line 27
    crypto.encrypt(convert.latin12unicode(b"testing accented char àáâãäåæçèéêëìíîïðñòóôõö÷øùúûüýþÿ"), Random.bytes(32))
                                         ^
SyntaxError: bytes can only contain ASCII literal characters.

Compiling './lib/python3.5/site-packages/tests/test_date.py'...
***   File "./lib/python3.5/site-packages/tests/test_date.py", line 28
    expecting = Date(datetime(2015, 10, 04, 13, 53, 11))
                                         ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/tests/test_json.py'...
***   File "./lib/python3.5/site-packages/tests/test_json.py", line 38
    output = value2json({"comment": b"testing accented char àáâãäåæçèéêëìíîïðñòóôõö÷øùúûüýþÿ"})
                                   ^
SyntaxError: bytes can only contain ASCII literal characters.

Compiling './lib/python3.5/site-packages/tests/test_pypy_json.py'...
***   File "./lib/python3.5/site-packages/tests/test_pypy_json.py", line 44
    output = value2json({"comment": b"testing accented char àáâãäåæçèéêëìíîïðñòóôõö÷øùúûüýþÿ"})
                                   ^
SyntaxError: bytes can only contain ASCII literal characters.

Compiling './lib/python3.5/site-packages/tests/test_typed_json.py'...
***   File "./lib/python3.5/site-packages/tests/test_typed_json.py", line 34
    value = {"comment": b"testing accented char àáâãäåæçèéêëìíîïðñòóôõö÷øùúûüýþÿ"}
                       ^
SyntaxError: bytes can only contain ASCII literal characters.

Listing './share'...
Listing './share/python-wheels'...
